--- a/Style_Guide_Template/css/main.css
+++ b/Style_Guide_Template/css/main.css
@@ -34,6 +34,13 @@ code {
   display: block;
 }
 
+/* Responsive Images */
+img {
+  height: auto; 
+  width: auto;
+  max-width: 100%;
+}
+
 
 /* 
   INTERACTIVE ELEMENTS -------------------
@@ -41,12 +48,12 @@ code {
 
 /* Styling for the navigation button */
 .button-nav {
+  text-decoration: none;
   display: inline-block;
   padding: 1em 0.75em;
   color: #FFF;
   background-color: #333;
   /*border-radius: 0.25em;*/
-  text-decoration: none;
   -webkit-transition: color 0.5s ease-out;
   transition: color 0.5s ease-out;
 }
@@ -167,6 +174,31 @@ input[type="submit"] {
   font-size: 2em;
 }
 
+/* Product listing classes */
+.example-product-list {
+  width: 80%;
+}
+
+div div a p.product-name {
+  text-decoration: none;
+  font-size: 1em;
+  text-align: center;
+}
+
+.product-layout {
+  width: 200px;
+  display: inline-block;
+  margin: 1em;
+}
+
+a.product-link {
+  text-decoration: none;
+  color: #288BB2;
+}
+
+a.product-link:hover, a.product-link:focus {
+  text-decoration: underline;
+}
 
 /* 
   COMBINED ELEMENTS -------------------
