--- a/week5/css/main.css
+++ b/week5/css/main.css
@@ -20,23 +20,68 @@ h2 {
   max-width: 100%;
 }
 
-#nav-bar {
-	width: 100%;
-	position: fixed;
-	top: 0;
-	left: 0;
-	background-color: #333;
-
-  z-index: 10;
-
-}
-
 .header {
 	margin-top: 2em;
 }
 
 /* Styling for the navigation button */
+#nav-bar {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(30, 30, 30, 0.6);
+  z-index: 9999;
+}
+
+#logo {
+  display: inline-block;
+  position: relative;
+  top: 0.85em;
+  float: left;
+  left: 15em;
+}
+
+#logo-text{
+  display: inline-block;
+  position: relative;
+  float: left;
+  margin: 0;
+  padding: 1em 2em;
+  left: 14em;
+  color: white;
+}
+
+#nav-right {
+  position: relative;
+  width: 60%;
+  float: right;
+}
+
+.button-nav-right {
+  float: right;
+  right: 15em;
+}
+
 .button-nav {
+  text-decoration: none;
+  display: block;
+  position: relative;
+  padding: 1em 2em;
+  color: #FFF;
+  -webkit-transition: color 0.5s ease-out;
+  transition: color 0.5s ease-out;
+}
+
+.button-nav:hover, .button-nav:focus {
+  color: #999;
+  -webkit-transition: color 0.5s ease-out;
+  transition: color 0.5s ease-out;
+}
+
+/* Styling for regular button */
+
+.button-regular {
   text-decoration: none;
   display: inline-block;
   padding: 1em 0.75em;
@@ -47,7 +92,7 @@ h2 {
   transition: color 0.5s ease-out;
 }
 
-.button-nav:hover, .button-nav:focus {
+.button-regular:hover, .button-regular:focus {
   color: #999;
   -webkit-transition: color 0.5s ease-out;
   transition: color 0.5s ease-out;
@@ -67,7 +112,7 @@ h2 {
   margin-left: 15%;
   margin-right: 15%;
   text-align: center;
-  font-size:4em;
+  font-size:4rem;
   z-index: 1;
   font-weight: 900;
   position: absolute;
@@ -92,7 +137,7 @@ h2 {
   position: relative;
   margin-bottom: -1em;
   width:100%;
-  height:100%;
+  height:40em;
   background-color: white;
   display: block;
 }
@@ -102,7 +147,7 @@ h2 {
   font-size:4em;
   z-index: 1;
   font-weight: 900;
-  position: relative;
+  position: absolute;
   bottom: 9em;
 }
 
