--- a/week5/css/main.css
+++ b/week5/css/main.css
@@ -20,23 +20,67 @@ h2 {
   max-width: 100%;
 }
 
-#nav-bar {
-	width: 100%;
-	position: fixed;
-	top: 0;
-	left: 0;
-	background-color: #333;
-
-  z-index: 10;
-
-}
-
 .header {
 	margin-top: 2em;
 }
 
 /* Styling for the navigation button */
+#nav-bar {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(30, 30, 30, 0.9);
+  z-index: 9999;
+}
+
+#logo {
+  display: inline-block;
+  position: relative;
+  top: 0.85em;
+  float: left;
+  left: 15em;
+}
+
+#logo-text{
+  display: inline-block;
+  position: relative;
+  float: left;
+  margin: 0;
+  padding: 1em 2em;
+  left: 14em;
+  color: white;
+}
+
+#nav-right {
+  position: relative;
+  float: right;
+}
+
+.button-nav-right {
+  float: right;
+  right: 15em;
+}
+
 .button-nav {
+  text-decoration: none;
+  display: block;
+  position: relative;
+  padding: 1em 2em;
+  color: #FFF;
+  -webkit-transition: color 0.5s ease-out;
+  transition: color 0.5s ease-out;
+}
+
+.button-nav:hover, .button-nav:focus {
+  color: #999;
+  -webkit-transition: color 0.5s ease-out;
+  transition: color 0.5s ease-out;
+}
+
+/* Styling for regular button */
+
+.button-regular {
   text-decoration: none;
   display: inline-block;
   padding: 1em 0.75em;
@@ -47,7 +91,7 @@ h2 {
   transition: color 0.5s ease-out;
 }
 
-.button-nav:hover, .button-nav:focus {
+.button-regular:hover, .button-regular:focus {
   color: #999;
   -webkit-transition: color 0.5s ease-out;
   transition: color 0.5s ease-out;
@@ -67,7 +111,7 @@ h2 {
   margin-left: 15%;
   margin-right: 15%;
   text-align: center;
-  font-size:4em;
+  font-size:4rem;
   z-index: 1;
   font-weight: 900;
   position: absolute;
@@ -83,7 +127,7 @@ h2 {
 /*  left:15em;*/
   color:#eee;
   position: absolute;
-  bottom: 26.5em;
+  bottom: 23em;
 
 }
 /* Section 2 */
@@ -99,33 +143,22 @@ h2 {
 
 .section-header2{
   text-align: center;
-  font-size:2em;
-  color:#333333;
+  font-size:4em;
   z-index: 1;
-  font-weight:900;
-  position: relative;
-  top:6em;
-  left:6em;
+  font-weight: 900;
+  position: absolute;
+  bottom: 9em;
 }
 
 .section-text2{
-  width: 40%;
+  width: 50%;
   position: absolute;
   z-index: 1;
-  
-  left:35.2em;
-  top: 15em;
   text-align: center;
+  left:8em;
+  top: 50em;
 }
 
-.world-map{
-  position:absolute;
-  width:25%;
-  left:7em;
-  top:15em;
-
-
-}
 /* Section 3 */
 
 .section3 {
@@ -172,33 +205,11 @@ h2 {
   }
 }*/
 
-
-/*.section-header2 {
-  width: 40%;
-  line-height: 1em;
-  margin-bottom: 0.5em;
-  position: absolute;
-  z-index: 1;
-  font-size: 10em;
-  left: 2em;
-  top: 5em;
-}*/
-
-/*.section-text2 {
-  width: 80%;
-  position: absolute;
-  z-index: 1;
-  text-align: center;
-  left:8em;
-  top: 54em;
-}*/
-
-
 /* Section 5 */
 
 .section5 {
   position: relative;
-  margin-bottom: -1em;
+  /*margin-bottom: -1em;*/
 
 }
 
@@ -220,7 +231,63 @@ h2 {
   top: 26em;
 }
 
+#footer {
+  width: 100%;
+  height: 20em;
+  background-color: #333;
+  margin-top: -0.2em;
+  position: relative;
+}
 
+/* Text input box */
+form {
+  display: inline-block;
+  margin-top: 2.5em;
+
+}
+
+label {
+  display: block; /* stack forms */
+  color: white;
+  margin-bottom: 0.5em;
+  font-size: 1.5em;
+  margin-left: -3.5em;
+}
+
+textarea {
+  width: 15em;
+  height: 5em;
+}
+
+input {
+  margin-left: -2em;
+}
+
+/* Get rid of ugly border on submit form button */
+input[type="submit"] {
+  display: block;
+  margin-top: 1em;
+  margin-left: 0em;
+}
+
+/* Styling for submit buttons */
+.button-submit {
+  display: inline-block;
+  border-radius: 5px;
+  border: 1px solid #FFF;
+  padding: 0.75em 0.5em;
+  color: #FFF;
+  background-color: #333;
+  text-decoration: none;
+  -webkit-transition: color 0.5s ease-out;
+  transition: color 0.5s ease-out;
+}
+
+.button-submit:hover, .button-submit:focus {
+  background-color: #999;
+  -webkit-transition: color 0.5s ease-out;
+  transition: color 0.5s ease-out;
+}
 
 
 
